--- a/APPLI/SET_LIST/EDIT/HTML/CONFIRM/TABLE.HTML
+++ b/APPLI/SET_LIST/EDIT/HTML/CONFIRM/TABLE.HTML
@@ -2,11 +2,12 @@
 <!--<html>-->
 
 <!--セット名-->
-<h3><span class="label label-success">Set name</span></h3>
+<h2><span class="label label-success">Set name</span></h2>
+<h3><span class="label label-info">###SET_EDIT_INFO###</span></h3>
 <table class="table" style="font-size:12px;">
     <thead>
         <tr>
-            <th>#</th>
+            <th>NO</th>
             <th>SET CATEGORY</th>
             <th>SET NAME</th>
             <th>SET PRICE</th>
@@ -16,10 +17,10 @@
         </tr>
     </thead>
     <tbody>
-        <!--NEW セット新規追加-->
+        <!--セット-->
         <tr>
             <td>
-                <span class="label label-default">-</span>
+                <span class="label label-default">###SET_NO###</span>
             </td>
             
             <!--セットカテゴリ-->
@@ -40,7 +41,7 @@
                 <input type="text" id="SET_REMARKS_NEW" name="SET_REMARKS_NEW" value="###SET_REMARKS###" class="form-control input-sm" style="" placeholder="備考" disabled=disabled />
             </td>           
             <td>
-                <!--Confirmボタン-->
+                <!--ボタン-->
                 <a class="btn btn-primary btn-lg btn-set" id="SET_COMPLETE">COMPLETE</a>
             </td>           
         </tr>
@@ -48,7 +49,8 @@
 </table>
 
 <!--作業-->
-<h3><span class="label label-info">Operation</span></h3>
+<h2><span class="label label-info">Operation</span></h2>
+<h3><span class="label label-info">###OPE_EDIT_INFO###</span></h3>
 <table class="table" style="font-size:12px;">
     <thead>
         <tr>
@@ -65,7 +67,8 @@
 </table>
 
 <!--部品-->
-<h3><span class="label label-info">Parts</span></h3>
+<h2><span class="label label-info">Parts</span></h2>
+<h3><span class="label label-info">###PARTS_EDIT_INFO###</span></h3>
 <table class="table" style="font-size:12px;">
     <thead>
         <tr>
