--- a/APPLI/SET_LIST/EDIT/HTML/SET/INPUT.HTML
+++ b/APPLI/SET_LIST/EDIT/HTML/SET/INPUT.HTML
@@ -82,9 +82,9 @@
 
         //値
         var set_category_no = $('#SET_CATEGORY_NO_HID_' + row).val();
-        var set_category_nx = $('#SET_CATEGORY_NX_HID_' + row).val();
+        var set_category_nx = $('#SET_CATEGORY_NO_HID').val();
         var set_category_nm = $('#SET_CATEGORY_NM_' + row).val();
-        var set_no = $('#SET_NO_HID_' + row).val();
+        var set_no = $('#SET_NO_HID').val();
         var set_nm = $('#SET_NM_' + row).val();
         var set_nm_nx = $('#SET_NM_NX_HID_' + row).val();
         var set_price = $('#SET_PRICE_' + row).val();
