--- a/APPLI/SET_LIST/EDIT/HTML/CONFIRM/TABLE.HTML
+++ b/APPLI/SET_LIST/EDIT/HTML/CONFIRM/TABLE.HTML
@@ -3,7 +3,7 @@
 
 <!--セット名-->
 <h2><span class="label label-success">Set name</span></h2>
-<h3><span class="label label-info">###SET_EDIT_INFO###</span></h3>
+<h3><span class="label ###LABEL_SET###">###SET_EDIT_INFO###</span></h3>
 <table class="table" style="font-size:12px;">
     <thead>
         <tr>
@@ -50,7 +50,7 @@
 
 <!--作業-->
 <h2><span class="label label-info">Operation</span></h2>
-<h3><span class="label label-info">###OPE_EDIT_INFO###</span></h3>
+<h3><span class="label ###LABEL_OPE###">###OPE_EDIT_INFO###</span></h3>
 <table class="table" style="font-size:12px;">
     <thead>
         <tr>
@@ -68,7 +68,7 @@
 
 <!--部品-->
 <h2><span class="label label-info">Parts</span></h2>
-<h3><span class="label label-info">###PARTS_EDIT_INFO###</span></h3>
+<h3><span class="label ###LABEL_PARTS###">###PARTS_EDIT_INFO###</span></h3>
 <table class="table" style="font-size:12px;">
     <thead>
         <tr>
