SET_LIST/NEW,EDIT,DELETE complete.

--- a/APPLI/SET_LIST/NEW/HTML/SET/INPUT.HTML
+++ b/APPLI/SET_LIST/NEW/HTML/SET/INPUT.HTML
@@ -67,7 +67,7 @@
         $('#SET_CATEGORY_NO_HID_' + row).val(cat_no);
     });
 
-    //NEWボタン
+    //ADDボタン
     $(document).on('click', 'a.btn-set', function() {
 
         //イベント基本情報
