--- a/APPLI/SET_LIST/EDIT/HTML/CONFIRM/INPUT.HTML
+++ b/APPLI/SET_LIST/EDIT/HTML/CONFIRM/INPUT.HTML
@@ -62,12 +62,20 @@
     //COMPLETEボタン
     $(document).on('click', 'a.btn-set', function() {
 
+        //基本情報
         var set_no = $('#SET_NO_HID').val();
+        var set_category_nx = $('#SET_CATEGORY_NO_HID').val();
+        var set_category_no = $('#SET_CATEGORY_NO_HID_EDIT').val();
 
         //仮登録の登録・更新・削除
         var jqXHR = $.ajax({
             type: 'POST',
-            url: '/APP/SET_LIST/EDIT/COMPLETE'
+            url: '/APP/SET_LIST/EDIT/COMPLETE',
+            data: {
+              SET_NO: set_no,
+              SET_CATEGORY_NX: set_category_nx,
+              SET_CATEGORY_NO: set_category_no,
+            }
         });
         jqXHR.done(function(data) {
             if (data == 2222) {
